--- a/style.css
+++ b/style.css
@@ -7,6 +7,34 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.small-titles{
+    text-align:justify;
+    font-size: 21px;
+    font-weight: 500;
+    text-transform: none;
+}
+
+.small-titles-2{
+    text-align:center;
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: none;
+}
+
+.small-titles-3{
+    font-size: 21px;
+}
+
+.small-titles-4{
+    font-size: 16px;
+}
+
+@media (min-width: 768px){
+    .small-titles{
+        margin: auto 20%;
+    }
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
@@ -776,6 +804,10 @@ h4 {
 
 .tc-white {
     color: #F3976C!important;
+}
+
+.tc-gray {
+    color: #717171!important;
 }
 
 .btn-atomic-tangerine {
